updated interestRateFrequencyType in API doc

--- a/api-docs/apiLive.htm
+++ b/api-docs/apiLive.htm
@@ -4083,7 +4083,7 @@ GET https://DomainName/api/v1/loans/{loanId}
 							<td>productId, principal, loanTermFrequency,
 								loanTermFrequencyType, numberOfRepayments, repaymentEvery,
 								repaymentFrequencyType, interestRatePerPeriod,
-								interestRateFrequencyType, amortizationType, interestType,
+								amortizationType, interestType,
 								interestCalculationPeriodType, expectedDisbursementDate,
 								transactionProcessingStrategyId</td>
 						</tr>
@@ -4108,7 +4108,6 @@ Request Body:
     "repaymentEvery": 1,
     "repaymentFrequencyType": 2,
     "interestRatePerPeriod": 2,
-    "interestRateFrequencyType": 2,
     "amortizationType": 1,
     "interestType": 0,
     "interestCalculationPeriodType": 1,
@@ -4234,7 +4233,7 @@ Request Body:
 							<td>clientId, productId, principal, loanTermFrequency,
 								loanTermFrequencyType, numberOfRepayments, repaymentEvery,
 								repaymentFrequencyType, interestRatePerPeriod,
-								interestRateFrequencyType, amortizationType, interestType,
+								amortizationType, interestType,
 								interestCalculationPeriodType, transactionProcessingStrategyId,
 								expectedDisbursementDate, submittedOnDate</td>
 						</tr>
@@ -4260,7 +4259,6 @@ Request Body:
     "repaymentEvery": 1,
     "repaymentFrequencyType": 2,
     "interestRatePerPeriod": 2,
-    "interestRateFrequencyType": 2,
     "amortizationType": 1,
     "interestType": 0,
     "interestCalculationPeriodType": 1,
