update api-docs (mostly reports tempplate)

--- a/api-docs/apiLive.htm
+++ b/api-docs/apiLive.htm
@@ -1374,21 +1374,29 @@
 								<td>savingsaccounts/template?clientId={clientId}</td>
 								<td><a href="#savingsaccounts_template">Retrieve Savings Account Template</a></td>
 							</tr>
-							<tr class="alt">
+                                                        <tr class="alt">
+                                                                <td>savingsaccounts/{accountId}/transactions/template</td>
+                                                                <td><a href="#savingsaccounts_transactions_template">Retrieve Savings Account Transaction Template</a></td>
+                                                        </tr>
+							<tr>
 								<td>offices/template</td>
 								<td><a href="#offices_template">Retrieve Office Template</a></td>
 							</tr>
-							<tr>
+							<tr class="alt">
 								<td>users/template</td>
 								<td><a href="#users_template">Retrieve User Template</a></td>
 							</tr>
-                                                        <tr class="alt">
+                                                        <tr>
                                                                 <td>audits/searchtemplate</td>
                                                                 <td><a href="#audits_searchtemplate">Retrieve Audit Search Template</a></td>
                                                         </tr>
-                                                        <tr>
+                                                        <tr class="alt">
                                                                 <td>makercheckers/searchtemplate</td>
                                                                 <td><a href="#makercheckers_searchtemplate">Retrieve Maker Checker Search Template</a></td>
+                                                        </tr>
+                                                        <tr>
+                                                                <td>reports/template</td>
+                                                                <td><a href="#reports_template">Retrieve Report Template</a></td>
                                                         </tr>
 						</table>
 					</div>
@@ -10984,6 +10992,84 @@ No Request Body:
 				</div>
 			</div>
 
+			<a id="reports_template" name="reports_template" class="old-syle-anchor">&nbsp;</a>
+			<div class="method-section">
+				<div class="method-description">
+					<h4>Retrieve Report Template</h4>
+					<p>This is a convenience resource. It can be useful when
+						building maintenance user interface screens for client
+						applications. The template data returned consists of any or all
+						of:
+					<ul>
+						<li class=normalli>Field Defaults</li>
+						<li class=normalli>Allowed Value Lists</li>
+					</ul>
+					</p>
+					<p>Example Request:</p>
+					<div class=apiClick>reports/template</div>
+				</div>
+				<div class="method-example">
+					<code class="method-declaration">
+GET https://DomainName/api/v1/reports/template
+					</code>
+					<code class="method-response">
+{
+  "allowedReportTypes": [
+    "Table",
+    "Pentaho",
+    "Chart"
+  ],
+  "allowedReportSubTypes": [
+    "Bar",
+    "Pie"
+  ],
+  "allowedParameters": [
+    {
+      "id": 1,
+      "parameterName": "startDateSelect"
+    },
+    {
+      "id": 2,
+      "parameterName": "endDateSelect"
+    },
+    {
+      "id": 3,
+      "parameterName": "obligDateTypeSelect"
+    },
+    {
+      "id": 5,
+      "parameterName": "OfficeIdSelectOne"
+    },
+    {
+      "id": 6,
+      "parameterName": "loanOfficerIdSelectAll"
+    },
+    {
+      "id": 10,
+      "parameterName": "currencyIdSelectAll"
+    },
+    {
+      "id": 20,
+      "parameterName": "fundIdSelectAll"
+    },
+    {
+      "id": 25,
+      "parameterName": "loanProductIdSelectAll"
+    },
+    {
+      "id": 26,
+      "parameterName": "loanPurposeIdSelectAll"
+    },
+    {
+      "id": 100,
+      "parameterName": "parTypeSelect"
+    }
+  ]
+}
+					</code>
+				</div>
+			</div>
+
 			<a id="reports_create" name="reports_create" class="old-syle-anchor">&nbsp;</a>
 			<div class="method-section">
 				<div class="method-description">
@@ -11090,7 +11176,8 @@ GET https://DomainName/api/v1/reports
 				<div class="method-description">
 					<h4>Retrieve a Report</h4>
 					<p>Example Requests:</p>
-					<div class=apiClick>reports/1</div>
+					<div class=apiClick>reports/1</div><br><br>
+					<div class=apiClick>reports/1?template=true</div>
 				</div>
 				<div class="method-example">
 					<code class="method-declaration">
@@ -13961,6 +14048,14 @@ GET https://DomainName/api/v1/search?query=000000111
 							</tr>
 						</table></td>
 				</tr>
+                                <tr class="alt">
+                                        <td>centers/template</td>
+                                        <td><a href="#centers_template">Retrieve Center Template</a></td>
+                                </tr>
+                                <tr>
+                                        <td>groups/template</td>
+                                        <td><a href="#groups_template">Retrieve Group Template</a></td>
+                                </tr>
 				<tr class="alt">
 					<td>clients/template</td>
 					<td><a href="#clients_template">Retrieve Client Template</a></td>
@@ -13975,7 +14070,7 @@ GET https://DomainName/api/v1/search?query=000000111
 				</tr>
 				<tr>
 					<td>loans/{loanId}/transactions/template</td>
-					<td><a href="#loans_repaymenttemplate_etc">Retrieve Tranaction Template</a></td>
+					<td><a href="#loans_repaymenttemplate_etc">Retrieve Loan Transaction Template</a></td>
 				</tr>
 				<tr class="alt">
 					<td>savingproducts/template</td>
@@ -14004,6 +14099,10 @@ GET https://DomainName/api/v1/search?query=000000111
 				<tr class="alt">
 					<td>makercheckers/searchtemplate</td>
 					<td><a href="#makercheckers_searchtemplate">Retrieve Maker Checker Search Template</a></td>
+				</tr>
+				<tr>
+					<td>reports/template</td>
+					<td><a href="#reports_template">Retrieve Report Template</a></td>
 				</tr>
 			</table>
 		</div>
